# PythonExampleProject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
src/sample_package/: sample.py
tests/: test_sample.py
